<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardCornerRadius="@dimen/card_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fab_margin">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_layout"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/album_art" />

        <TextView
            android:id="@+id/text_view_albumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/text_view_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size" />


        <ImageView
            android:id="@+id/favorite_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:contentDescription="@string/favorite_logo" />


    </LinearLayout>

</android.support.v7.widget.CardView>