<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <!-- We could wrap the above linear layout in a scrollview if all the details do not show up on smaller screens -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <ImageView
                    android:id="@+id/image_view_detail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_layout"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/album_art" />

                <TextView
                    android:id="@+id/text_view_albumName_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:text="@string/album_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/extra_extra_large_text_size" />

                <TextView
                    android:id="@+id/text_view_artist_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:text="@string/artist_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/extra_large_text_size" />

                <TextView
                    android:id="@+id/text_view_release_date_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:text="@string/release_date"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/large_text_size" />

                <TextView
                    android:id="@+id/text_view_artist_url_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:text="@string/artist_url"
                    android:textColor="@drawable/text_color"
                    android:textSize="@dimen/large_text_size" />

                <TextView
                    android:id="@+id/text_view_explicit_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:text="@string/explicit"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/large_text_size" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>