<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <TextView
            android:id="@+id/fetch_count_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/albums_to_fetch"
            android:layout_weight="2"
            android:textSize="@dimen/large_text_size"
            android:paddingVertical="@dimen/album_name_padding"
            android:paddingHorizontal="@dimen/album_name_padding"
            />


        <EditText
            android:id="@+id/fetch_count_text_input"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:inputType="number"
            android:layout_weight="2"
            android:autofillHints="25"
            android:labelFor="@+id/fetch_count_view"/>


        <Button
            android:id="@+id/fetch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetch"
            android:layout_weight="1"
            android:onClick="myAlbumFetchClickHandler"
        />

    </LinearLayout>

    <TextView
        android:id="@+id/empty_error_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_data_available" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/top_margin"
        />

</android.support.constraint.ConstraintLayout>